--- a/data/.gitignore
+++ b/data/.gitignore
@@ -1,5 +1,8 @@
 # Ignore everything in this directory ...
-*
+/*
 
 # ... except this file
-!.gitignore
+!/.gitignore
+
+# ... and some of the files in ./aggregate
+!/aggregate/
